# rag-universal

./: .env.example  .gitignore  README.md  docker-compose.weaviate.yml  docker-compose.yml  pyproject.toml  settings.py  weaviate_store.py
backend/: app.py  db.py  weaviate_store.py
backend/endpoints/: auth.py  chat.py  health.py
backend/rag/: evaluation.py  generation.py  profiles.py  prompts.py  retrieval.py  runtime.py  service.py  types.py  utils.py
backend/rag/providers/embeddings/: base.py  factory.py  huggingface.py
backend/rag/providers/generation/: base.py  factory.py  huggingface.py
backend/rag/providers/rerankers/: base.py  factory.py  huggingface.py
backend/schemas/: schema_auth.py  schema_chat.py
frontend/: app.py  settings.py
scripts/: create_hash.py  document_processing.py  download_index.py  embed_uploader.py  preparing_uploading.py  preview_document_chunks.py  source_readers.py
